fixed navbar overflow on mobile

--- a/cart-page/style.css
+++ b/cart-page/style.css
@@ -729,7 +729,6 @@ span.size {
 
   .other-links {
     margin-right: 24px;
-    gap: 25px;
   }
 
   .other-links .search-icon {
