--- a/checkout-page-2/style.css
+++ b/checkout-page-2/style.css
@@ -522,7 +522,6 @@ h2 {
 
   .other-links {
     margin-right: 24px;
-    gap: 25px;
   }
 
   .other-links .search-icon {
