--- a/checkout-page-3/style.css
+++ b/checkout-page-3/style.css
@@ -402,7 +402,6 @@ h2 span.active {
 
   .other-links {
     margin-right: 24px;
-    gap: 25px;
   }
 
   .other-links .search-icon {
